feat: adding all address propeties in get restaurants route
